--- a/css/styles.css
+++ b/css/styles.css
@@ -30,3 +30,12 @@ td.align-center { width: 74px;}
     font-weight: bold;
     line-height: 1.5;
 }
+
+.bg-image {
+	background-image: url("/images/helpdesk.jpg");
+	background-color: #999999; /* Used if the image is unavailable */
+	height: 500px; /* You must set a specified height */
+	background-position: center; /* Center the image */
+	background-repeat: no-repeat; /* Do not repeat the image */
+	background-size: cover; /* Resize the background image to cover the entire container */
+}
